<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_bringup</name>
  <version>0.0.0</version>
  <description>Omni-wheel robot top-level launch files</description>
  <maintainer email="mift@todo.todo">mift</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>omni_gazebo</depend>
  <depend>omni_navigation</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
