<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_navigation</name>
  <version>0.0.0</version>
  <description>Omni-wheel robot SLAM and Nav2 navigation configs</description>
  <maintainer email="mift@todo.todo">mift</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>omni_gazebo</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
